:wrench:preparation of the working environment

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,13 +1,13 @@
-@import './vendors';
+// @import './vendors';
 
 @import './utils/variables';
 
-@import './base/';
+// @import './base/';
 
-@import './layout/';
+// @import './layout/';
 
-@import './pages/';
+// @import './pages/';
 
-@import './components/';
+// @import './components/';
 
-@import './themes/';
+// @import './themes/';
