:package:add header html

--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -2,4 +2,4 @@ $couleur_primaire : #9356DC;
 $couleur_secondaire : #FF79DA;
 $couleur_tertiaire:#99E2D0;
 $couleur_fond_gris: #EAEAEA;
-$couleur_fond_grisClair : #EFEFEF;
+$couleur_fond_gris-clair : #EFEFEF;
