--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,7 +5,7 @@
 @import './base/minireset';
 @import './base/typography';
 
-// @import './layout/';
+@import './layout/header';
 
 // @import './pages/';
 
