--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,4 +4,4 @@
 
 /* Police Roboto*/
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
