--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -14,17 +14,24 @@
         background-color: white;
     }
     &__location{
-        padding-top: 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-top: 13px;
         padding-bottom: 15px;
         background-color: $couleur_fond_gris;
+        box-shadow: inset 0px 3px 5px -2px grey;
         &--input{
+            width: 40%;
             border: none;
             background-color: $couleur_fond_gris;
             padding-left: 14px;
+            opacity: 1;
+            font-size: 1rem;
+            font-weight: bold;
             &::placeholder{
                 font-size: 1rem;
                 font-weight: bold;
-                letter-spacing: 0rem;
                 opacity: 0.7;
             }
         }
@@ -51,5 +58,13 @@
         padding: 15px;
         border-radius: 30px;
         background-color: $couleur_fond_gris-clair;
+        box-shadow: 2px 5px 15px 0px grey;
+        &:hover{
+            opacity: 0.7;
+            // box-shadow: 5px 5px 5px 0px grey;
+
+        }
+        
+
     }
 }
