--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,5 +1,5 @@
-$couleur_primaire : #9356DC;
-$couleur_secondaire : #FF79DA;
-$couleur_tertiaire:#99E2D0;
-$couleur_fond_gris: #EAEAEA;
-$couleur_fond_gris-clair : #EFEFEF;
+$primary_colour : #9356DC;
+$secondary_colour : #FF79DA;
+$tertiary_colour:#99E2D0;
+$ground_colour: #EAEAEA;
+$light_ground_color : #EFEFEF;
