--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,7 +3,8 @@
 .header{
     width: auto;
     text-align: center;
-    background-color: $couleur_fond_gris-clair;
+    align-items: center;
+    background-color: $light_ground_color;
     font-family: 'roboto';
     padding-bottom: 30px;
     &__h1{
@@ -19,12 +20,13 @@
         align-items: center;
         padding-top: 13px;
         padding-bottom: 15px;
-        background-color: $couleur_fond_gris;
+        background-color: $ground_colour;
         box-shadow: inset 0px 3px 5px -2px grey;
         &--input{
+            max-width: 200px;
             width: 40%;
             border: none;
-            background-color: $couleur_fond_gris;
+            background-color: $ground_colour;
             padding-left: 14px;
             opacity: 1;
             font-size: 1rem;
@@ -33,6 +35,7 @@
                 font-size: 1rem;
                 font-weight: bold;
                 opacity: 0.7;
+                
             }
         }
     }    
@@ -40,7 +43,7 @@
         padding-left: 58px;
         padding-right: 73px;
         padding-top: 39px;
-        background-color:$couleur_fond_gris-clair;
+        background-color:$ground_colour;
         font-size: 1.5rem;
         font-weight: bold;
     }
@@ -50,18 +53,18 @@
         padding-top: 12px;
     }
     &__btn{
-        display: block;
+        display: inline-block;
         text-decoration: none;
         color: white;
-        background: linear-gradient($couleur_secondaire, $couleur_primaire);
+        max-width: 450px;
+        background: linear-gradient($secondary_colour, $primary_colour);
         margin: 30px 80px;
         padding: 15px;
         border-radius: 30px;
-        background-color: $couleur_fond_gris-clair;
+        background-color: $light_ground_color;
         box-shadow: 2px 5px 15px 0px grey;
         &:hover{
             opacity: 0.7;
-            // box-shadow: 5px 5px 5px 0px grey;
 
         }
         
