:lipstick:nav.scss modification

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -128,7 +128,7 @@ th:not([align]) {
   padding-left: 58px;
   padding-right: 73px;
   padding-top: 39px;
-  background-color: #EAEAEA;
+  background-color: #EFEFEF;
   font-size: 1.5rem;
   font-weight: bold;
 }
@@ -163,16 +163,53 @@ th:not([align]) {
   font-size: 1.5rem;
   font-weight: bold;
   padding-top: 15px;
-  padding-bottom: 30px;
+  padding-bottom: 20px;
 }
 .nav__ul {
   display: flex;
   flex-flow: column wrap;
   justify-content: center;
-  align-items: center;
 }
 .nav__ul--li {
+  width: auto;
   background-color: #EFEFEF;
+  font-size: 1rem;
+  padding: 20px 20px 18px 20px;
+  margin: 8px 20px 11px 8px;
+  border-radius: 20px;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  font-weight: 600;
+  color: black;
+  box-shadow: 5px 8px 38px -23px #808080;
+}
+.nav__ul--li:hover {
+  background-color: #e9def7;
+}
+.nav__ul--li:hover :nth-child(2) {
+  color: #9356DC;
+  opacity: 1;
+}
+.nav__ul--li--figure {
+  position: relative;
+  margin-left: -30px;
+  background-color: #9356DC;
+  border-radius: 50%;
+  padding: 6px 10px 6px 10px;
+  font-size: 0.8rem;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.nav__ul--li :nth-child(2) {
+  opacity: 0.5;
+  margin-left: 7%;
+  margin-right: 8%;
+  font-size: 1.3rem;
+  width: 25px;
 }
 
 /*# sourceMappingURL=style.css.map */
