--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -3,3 +3,4 @@ $secondary_colour : #FF79DA;
 $tertiary_colour:#99E2D0;
 $ground_colour: #EAEAEA;
 $light_ground_color : #EFEFEF;
+$light_ground_color-nav: #e9def7;
