--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,20 +1,22 @@
 /*header*/
 
-.header{
+.header {
     width: auto;
     text-align: center;
     align-items: center;
     background-color: $light_ground_color;
     font-family: 'roboto';
     padding-bottom: 30px;
-    &__h1{
+
+    &__h1 {
         font-family: 'shrikhand';
         font-size: 1.9rem;
         padding-top: 14px;
-        padding-bottom: 5px;  
+        padding-bottom: 5px;
         background-color: white;
     }
-    &__location{
+
+    &__location {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -22,7 +24,8 @@
         padding-bottom: 15px;
         background-color: $ground_colour;
         box-shadow: inset 0px 3px 5px -2px grey;
-        &--input{
+
+        &--input {
             max-width: 200px;
             width: 40%;
             border: none;
@@ -31,28 +34,33 @@
             opacity: 1;
             font-size: 1rem;
             font-weight: bold;
-            &::placeholder{
+
+            &::placeholder {
                 font-size: 1rem;
                 font-weight: bold;
                 opacity: 0.7;
-                
+
             }
         }
-    }    
-    &__h2{
+    }
+
+    &__h2 {
         padding-left: 58px;
         padding-right: 73px;
         padding-top: 39px;
-        background-color:$ground_colour;
+        background-color: $light_ground_color;
         font-size: 1.5rem;
         font-weight: bold;
     }
-    &__p{
+
+    &__p {
         font-size: 1.1rem;
-        font-weight: 300 ;
+        font-weight: 300;
         padding-top: 12px;
+
     }
-    &__btn{
+
+    &__btn {
         display: inline-block;
         text-decoration: none;
         color: white;
@@ -63,11 +71,12 @@
         border-radius: 30px;
         background-color: $light_ground_color;
         box-shadow: 2px 5px 15px 0px grey;
-        &:hover{
+
+        &:hover {
             opacity: 0.7;
 
         }
-        
+
 
     }
 }
