--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,38 @@
-/*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
+.full-heart {
+  position: absolute;
+  z-index: 2;
+  left: 0;
+  top: 0;
+  background: linear-gradient(#FF79DA, #9356DC);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  opacity: 0;
+  font-size: 1em;
+  transform: scale(0);
+  transition: 1s;
+}
+
+.empty-heart {
+  position: relative;
+  z-index: 1;
+  -webkit-text-stroke: 2px white;
+  font-size: 2em;
+  color: black;
+}
+.empty-heart:hover {
+  background: linear-gradient(#FF79DA, #9356DC);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 0px white;
+}
+.empty-heart:hover > .full-heart {
+  opacity: 1;
+  transform: scale(1);
+}
+
+/*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
 html,
 body,
 p,
@@ -82,6 +114,10 @@ th:not([align]) {
   text-align: left;
 }
 
+a {
+  text-decoration: none;
+}
+
 /* Police Shrikhand*/
 /* Police Roboto*/
 /*header*/
@@ -157,13 +193,14 @@ th:not([align]) {
   font-family: "roboto";
   width: auto;
   padding-top: 30px;
+  padding-bottom: 60px;
   padding-left: 19px;
 }
 .nav__h2 {
   font-size: 1.5rem;
   font-weight: bold;
   padding-top: 15px;
-  padding-bottom: 20px;
+  padding-bottom: 19px;
 }
 .nav__ul {
   display: flex;
@@ -210,6 +247,65 @@ th:not([align]) {
   margin-right: 8%;
   font-size: 1.3rem;
   width: 25px;
+}
+
+.article {
+  font-family: "roboto";
+  width: auto;
+  padding-top: 38px;
+  padding-left: 19px;
+  padding-right: 19px;
+  background-color: #EFEFEF;
+}
+.article__h2 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding-top: 15px;
+  padding-bottom: 22px;
+}
+.article__figure {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0;
+  margin-bottom: 17px;
+  border-radius: 20px;
+  background-color: white;
+}
+.article__figure--new {
+  border-radius: 5%;
+  padding: 5px 10px;
+  right: 9%;
+  margin-top: 13px;
+  position: absolute;
+  background-color: #99E2D0;
+  color: #278870;
+  font-size: 0.9rem;
+  font-weight: bold;
+}
+.article__figure__img {
+  object-fit: cover;
+  height: 174px;
+  padding: 0;
+  border-radius: 15px 15px 0 0;
+}
+.article__figcaption {
+  color: black;
+  padding-top: 16px;
+  padding-bottom: 17px;
+  padding-left: 13px;
+  display: flex;
+  flex-flow: column wrap;
+}
+.article__figcaption__h3 {
+  text-decoration: none;
+  font-size: 1.1rem;
+  font-weight: bold;
+  padding-bottom: 5px;
+}
+.article__figcaption__like {
+  position: absolute;
+  right: 3em;
 }
 
 /*# sourceMappingURL=style.css.map */
