--- a/sass/layout/_article.scss
+++ b/sass/layout/_article.scss
@@ -4,6 +4,7 @@
     padding-top: 38px;
     padding-left: 19px;
     padding-right: 19px;
+    padding-bottom: 46px;
     background-color: $light_ground_color;
 
     &__h2 {
