--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import './layout/header';
 @import './layout/nav';
 @import './layout/article';
+@import './layout/footer';
 
 // @import './pages/';
 
