--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,12 +2,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
 @keyframes alternatecolor {
-  from {
-    box-shadow: 0 -2px 0 #9356dc, -2px 0 0 #FF79DA, 0 2px 0 #9356dc, 2px 0 0 #99E2D0;
-  }
   to {
-    box-shadow: 0 -8px 0 #99E2D0, -8px 0 0 #FF79DA, 0 8px 0 #99E2D0, 8px 0 0 #9356dc;
-    opacity: 0;
+    box-shadow: 0 -6px 0 #9356dc, -6px 0 0 #FF79DA, 0 6px 0 #9356dc, 6px 0 0 #99E2D0;
+  }
+  from {
+    box-shadow: 0 -6px 0 #99E2D0, -6px 0 0 #FF79DA, 0 6px 0 #99E2D0, 6px 0 0 #9356dc;
   }
 }
 @keyframes spinning {
@@ -16,6 +15,20 @@
   }
   to {
     transform: rotate(450deg);
+  }
+}
+@keyframes visibility-filter {
+  0% {
+    visibility: visible;
+    opacity: 0.6;
+  }
+  99% {
+    visibility: visible;
+    opacity: 0.6;
+  }
+  100% {
+    visibility: hidden;
+    opacity: 0;
   }
 }
 /*end spinner*/
@@ -142,18 +155,22 @@ a {
 /* Police Shrikhand*/
 /* Police Roboto*/
 /*spinner*/
-.contenair {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+.filter {
+  background-color: #dbd9d9;
+  opacity: 0.6;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  animation: visibility-filter 3s linear 1 forwards;
 }
 
 .spinner {
   position: fixed;
-  color: black;
-  cursor: pointer;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -40%);
   transition: transform 0.4s cubic-bezier(0.23, 1.83, 0.42, 1.19);
 }
 .spinner__circle {
