--- a/public/css/style.css
+++ b/public/css/style.css
@@ -249,6 +249,29 @@ a {
 .header__btn:hover {
   opacity: 0.7;
 }
+.header__top {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  align-items: center;
+  padding-top: 12px;
+  background-color: white;
+}
+.header__top__arrow {
+  padding-left: 23px;
+  text-align: left;
+  font-size: 1.1rem;
+  width: 23%;
+}
+.header__top__logo {
+  width: 47%;
+  height: 50px;
+}
+.header__top__img {
+  width: 100%;
+  height: 20rem;
+  margin-bottom: -4rem;
+}
 
 .nav {
   font-family: "roboto";
