:package:add menu.scss

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -249,28 +249,15 @@ a {
 .header__btn:hover {
   opacity: 0.7;
 }
-.header__top {
-  display: flex;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-  align-items: center;
-  padding-top: 12px;
-  background-color: white;
+.header__arrow {
+  color: black;
+  font-size: 1.6rem;
+  float: left;
+  margin: 5px -10px 0px 25px;
 }
-.header__top__arrow {
-  padding-left: 23px;
-  text-align: left;
-  font-size: 1.1rem;
-  width: 23%;
-}
-.header__top__logo {
-  width: 47%;
-  height: 50px;
-}
-.header__top__img {
-  width: 100%;
-  height: 20rem;
-  margin-bottom: -4rem;
+.header__img {
+  object-fit: cover;
+  height: 250px;
 }
 
 .nav {
@@ -435,6 +422,89 @@ a {
 .footer__icon {
   width: 1.2rem;
   margin-right: 0.5rem;
+}
+
+.menu {
+  width: auto;
+  background-color: #EAEAEA;
+  text-align: center;
+}
+.menu__h2 {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 20px;
+  margin-top: -64px;
+  border-radius: 35px 35px 0px 0px;
+  background-color: #EFEFEF;
+  font-family: "shrikhand";
+  font-size: 1.8rem;
+}
+.menu__like {
+  display: flex;
+  font-size: 0.9rem;
+  align-items: center;
+  justify-content: center;
+}
+.menu__submenu {
+  text-align: left;
+}
+.menu__submenu--h3 {
+  font-family: "roboto";
+  padding: 15px 15px 5px 15px;
+}
+.menu__submenu--h3::after {
+  content: "";
+  width: 45px;
+  display: block;
+  height: 3px;
+  background-color: #99E2D0;
+  bottom: -5px;
+}
+.menu__submenu__flat {
+  width: auto;
+  padding: 15px;
+  margin: 10px;
+  border-radius: 15px;
+  box-shadow: 2px 2px 5px 2px #dddddd;
+  font-family: "roboto";
+  font-size: 1rem;
+  background-color: white;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: flex-end;
+  position: relative;
+  overflow: hidden;
+}
+.menu__submenu__flat :nth-child(1) {
+  flex: 1 100%;
+  margin-right: 0px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.menu__submenu__flat :nth-child(2) {
+  width: 80%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  font-size: 0.8rem;
+}
+.menu__button {
+  border-radius: 30px 30px 30px 30px;
+  padding: 15px;
+  background: linear-gradient(#FF79DA, #9356DC);
+  border-style: hidden;
+  font-size: 1rem;
+  color: white;
+  box-shadow: 2px 2px 5px 2px #dddddd;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+.menu__button:hover {
+  box-shadow: 2px 2px 5px 2px #B9B9B9;
+  opacity: 90%;
 }
 
 /*# sourceMappingURL=style.css.map */
