--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import './layout/nav';
 @import './layout/article';
 @import './layout/footer';
+@import './layout/menu';
 
 // @import './pages/';
 
