--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,6 +66,24 @@
 }
 
 /*end heart animation*/
+/*validation menu*/
+@keyframes slide {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 20%;
+    opacity: 1;
+  }
+}
+@keyframes jump {
+  0% {
+    transform: rotate(-180deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
 /*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
 html,
 body,
@@ -258,6 +276,7 @@ a {
 .header__img {
   object-fit: cover;
   height: 250px;
+  width: 100%;
 }
 
 .nav {
@@ -436,7 +455,7 @@ a {
   padding: 30px 20px;
   margin-top: -64px;
   border-radius: 35px 35px 0px 0px;
-  background-color: #EFEFEF;
+  background-color: #EAEAEA;
   font-family: "shrikhand";
   font-size: 1.8rem;
 }
@@ -451,45 +470,57 @@ a {
 }
 .menu__submenu--h3 {
   font-family: "roboto";
-  padding: 15px 15px 5px 15px;
+  padding: 0px 15px 0px 20px;
 }
 .menu__submenu--h3::after {
   content: "";
-  width: 45px;
+  width: 40px;
   display: block;
   height: 3px;
   background-color: #99E2D0;
+  margin-top: 5px;
   bottom: -5px;
 }
 .menu__submenu__flat {
   width: auto;
-  padding: 15px;
-  margin: 10px;
+  margin: 16px;
   border-radius: 15px;
   box-shadow: 2px 2px 5px 2px #dddddd;
   font-family: "roboto";
   font-size: 1rem;
   background-color: white;
   display: flex;
-  flex-flow: row wrap;
   justify-content: space-between;
-  align-items: flex-end;
-  position: relative;
-  overflow: hidden;
 }
-.menu__submenu__flat :nth-child(1) {
+.menu__submenu__flat--text {
+  padding: 10px;
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+.menu__submenu__flat--text :nth-child(1) {
   flex: 1 100%;
   margin-right: 0px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  font-weight: bold;
+  font-size: 1.1rem;
 }
-.menu__submenu__flat :nth-child(2) {
+.menu__submenu__flat--text :nth-child(2) {
   width: 80%;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  font-size: 0.8rem;
+  font-size: 0.85rem;
+}
+.menu__submenu__flat:hover .validation {
+  animation: slide 0.5s ease 1 forwards;
+}
+.menu__submenu__flat:hover .check {
+  animation: jump 0.5s ease 1 forwards;
 }
 .menu__button {
   border-radius: 30px 30px 30px 30px;
@@ -505,6 +536,25 @@ a {
 .menu__button:hover {
   box-shadow: 2px 2px 5px 2px #B9B9B9;
   opacity: 90%;
+}
+
+.validation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 0%;
+  height: 70px;
+  opacity: 0;
+  background-color: darkcyan;
+  border-radius: 0 15px 15px 0;
+}
+
+.check {
+  display: flex;
+  align-items: center;
+  color: white;
+  margin: auto;
+  font-size: 1.3em;
 }
 
 /*# sourceMappingURL=style.css.map */
