--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,3 @@
-/*spinner*/
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
 @keyframes alternatecolor {
@@ -31,8 +30,6 @@
     opacity: 0;
   }
 }
-/*end spinner*/
-/*Heart animation*/
 .full-heart {
   position: absolute;
   z-index: 2;
@@ -65,8 +62,6 @@
   transform: scale(1);
 }
 
-/*end heart animation*/
-/*validation menu*/
 @keyframes slide {
   0% {
     width: 0%;
@@ -82,6 +77,14 @@
   }
   100% {
     transform: rotate(0deg);
+  }
+}
+@keyframes itemAppear {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
   }
 }
 /*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
@@ -491,6 +494,10 @@ a {
   background-color: white;
   display: flex;
   justify-content: space-between;
+  animation: itemAppear 0.6s;
+  animation-timing-function: cubic-bezier(0.5, 1.58, 0.34, 0.82);
+  animation-fill-mode: both;
+  transform: scale(0);
 }
 .menu__submenu__flat--text {
   padding: 10px;
@@ -555,6 +562,46 @@ a {
   color: white;
   margin: auto;
   font-size: 1.3em;
+}
+
+.delay-0 {
+  animation-delay: 0s;
+}
+
+.delay-1 {
+  animation-delay: 0.2s;
+}
+
+.delay-2 {
+  animation-delay: 0.4s;
+}
+
+.delay-3 {
+  animation-delay: 0.6s;
+}
+
+.delay-4 {
+  animation-delay: 0.8s;
+}
+
+.delay-5 {
+  animation-delay: 1s;
+}
+
+.delay-6 {
+  animation-delay: 1.2s;
+}
+
+.delay-7 {
+  animation-delay: 1.4s;
+}
+
+.delay-8 {
+  animation-delay: 1.6s;
+}
+
+.delay-9 {
+  animation-delay: 1.8s;
 }
 
 /*# sourceMappingURL=style.css.map */
