--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,7 @@
   }
   to {
     transform: rotate(450deg);
+    visibility: hidden;
   }
 }
 @keyframes visibility-filter {
@@ -193,6 +194,7 @@ a {
   left: 50%;
   transform: translate(-50%, -40%);
   transition: transform 0.4s cubic-bezier(0.23, 1.83, 0.42, 1.19);
+  animation: visibility-filter 3s linear 1 forwards;
 }
 .spinner__circle {
   width: 25vw;
@@ -256,8 +258,6 @@ a {
   padding-top: 12px;
 }
 .header__btn {
-  display: inline-block;
-  text-decoration: none;
   color: white;
   max-width: 450px;
   background: linear-gradient(#FF79DA, #9356DC);
@@ -266,6 +266,9 @@ a {
   border-radius: 30px;
   background-color: #EFEFEF;
   box-shadow: 2px 5px 15px 0px grey;
+  border: none;
+  cursor: pointer;
+  font-size: 1.1rem;
 }
 .header__btn:hover {
   opacity: 0.7;
@@ -342,6 +345,15 @@ a {
   width: 25px;
 }
 
+@media screen and (min-width: 799px) {
+  .nav__ul {
+    flex-flow: row;
+    justify-content: space-around;
+  }
+  .nav__ul--li {
+    width: 30%;
+  }
+}
 .article {
   font-family: "roboto";
   width: auto;
