--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -31,6 +31,7 @@
             font-weight: 600;
             color: black;
             box-shadow: 5px 8px 38px -23px #808080;
+            cursor: pointer;
 
             &:hover {
                 background-color: $light_ground_color-nav;
