--- a/public/css/style.css
+++ b/public/css/style.css
@@ -317,6 +317,7 @@ a {
   font-weight: 600;
   color: black;
   box-shadow: 5px 8px 38px -23px #808080;
+  cursor: pointer;
 }
 .nav__ul--li:hover {
   background-color: #e9def7;
@@ -357,17 +358,28 @@ a {
 .article {
   font-family: "roboto";
   width: auto;
-  padding-top: 38px;
+  padding-top: 14px;
   padding-left: 19px;
   padding-right: 19px;
   padding-bottom: 46px;
   background-color: #EFEFEF;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-around;
+  align-items: center;
 }
 .article__h2 {
   font-size: 1.5rem;
   font-weight: bold;
   padding-top: 15px;
   padding-bottom: 22px;
+  display: flex;
+  flex: 1 0 100%;
+  text-align: left;
+}
+.article__card {
+  width: 100%;
+  max-width: 350px;
 }
 .article__figure {
   display: flex;
@@ -377,13 +389,14 @@ a {
   margin-bottom: 17px;
   border-radius: 20px;
   background-color: white;
+  position: relative;
 }
 .article__figure--new {
   border-radius: 5%;
   padding: 5px 10px;
+  position: absolute;
   right: 9%;
   margin-top: 13px;
-  position: absolute;
   background-color: #99E2D0;
   color: #278870;
   font-size: 0.9rem;
@@ -414,6 +427,20 @@ a {
   right: 3em;
 }
 
+@media screen and (min-width: 799px) {
+  .article {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+  }
+  .article__h2 {
+    flex: 1 100%;
+  }
+  .article__card {
+    width: 40%;
+    margin: 20px;
+  }
+}
 .footer {
   background-color: #353535;
 }
