:lipstick:  h2 article.scss correction

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -375,14 +375,14 @@ a {
   padding-bottom: 46px;
   background-color: #EFEFEF;
   display: flex;
-  flex-flow: column;
+  flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
 }
 .article__h2 {
   font-size: 1.5rem;
   font-weight: bold;
-  padding-top: 15px;
+  padding-top: 40px;
   padding-bottom: 22px;
   display: flex;
   flex: 1 0 100%;
@@ -391,6 +391,7 @@ a {
 .article__card {
   width: 100%;
   max-width: 350px;
+  transform: scale(1);
 }
 .article__figure {
   display: flex;
