:lipstick:correction responsive menu

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,11 +20,11 @@
 @keyframes visibility-filter {
   0% {
     visibility: visible;
-    opacity: 0.7;
+    opacity: 0.6;
   }
   99% {
     visibility: visible;
-    opacity: 0.7;
+    opacity: 0.6;
   }
   100% {
     visibility: hidden;
@@ -187,6 +187,16 @@ a {
 
 /* Police Shrikhand*/
 /* Police Roboto*/
+.contenair {
+  position: relative;
+  z-index: 2;
+}
+
+.body {
+  position: absolute;
+  z-index: 1;
+}
+
 /*spinner*/
 .filter {
   background-color: #dbd9d9;
@@ -197,6 +207,7 @@ a {
   bottom: 0;
   left: 0;
   animation: visibility-filter 3s linear 1 forwards;
+  z-index: 5;
 }
 
 .spinner {
@@ -391,7 +402,6 @@ a {
 .article__card {
   width: 100%;
   max-width: 350px;
-  transform: scale(1);
 }
 .article__figure {
   display: flex;
@@ -557,6 +567,7 @@ a {
   flex-flow: row wrap;
   align-items: center;
   justify-content: space-between;
+  overflow: hidden;
 }
 .menu__submenu__flat--text :nth-child(1) {
   flex: 1 100%;
@@ -564,6 +575,7 @@ a {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  white-space: normal;
   font-weight: bold;
   font-size: 1.1rem;
 }
@@ -590,6 +602,7 @@ a {
   box-shadow: 2px 2px 5px 2px #dddddd;
   margin-top: 40px;
   margin-bottom: 40px;
+  cursor: pointer;
 }
 .menu__button:hover {
   box-shadow: 2px 2px 5px 2px #B9B9B9;
@@ -601,7 +614,6 @@ a {
   justify-content: center;
   align-items: center;
   width: 0%;
-  height: 70px;
   opacity: 0;
   background-color: darkcyan;
   border-radius: 0 15px 15px 0;
@@ -657,6 +669,27 @@ a {
 
 .delay-10 {
   animation-delay: 2s;
+}
+
+@media screen and (min-width: 799px) {
+  .menu {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .menu__h2 {
+    flex: 1 0 100%;
+  }
+  .menu__submenu {
+    width: 33%;
+  }
+  .menu__button {
+    flex: 1 0 10%;
+    justify-content: center;
+    display: flex;
+    margin-left: 40%;
+    margin-right: 40%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
