--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import './base/minireset';
 @import './base/typography';
 
+@import './layout/body.scss';
 @import './layout/header';
 @import './layout/nav';
 @import './layout/article';
