--- a/sass/base/_minireset.scss
+++ b/sass/base/_minireset.scss
@@ -51,7 +51,9 @@ html {
   box-sizing: border-box;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
@@ -80,6 +82,6 @@ th:not([align]) {
   text-align: left;
 }
 
-a{
+a {
   text-decoration: none;
 }
