--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -56,8 +56,7 @@
         box-shadow: inset 0px 3px 5px -2px grey;
 
         &--input {
-            max-width: 200px;
-            width: 40%;
+            width: 135px;
             border: none;
             background-color: $ground_colour;
             padding-left: 14px;
