--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -56,6 +56,7 @@
             animation-timing-function: cubic-bezier(.5, 1.58, .34, .82);
             animation-fill-mode: both;
             transform: scale(0);
+            cursor: pointer;
 
             &--text {
                 padding: 10px;
@@ -72,7 +73,6 @@
                     overflow: hidden;
                     white-space: nowrap;
                     text-overflow: ellipsis;
-                    white-space: normal;
                     font-weight: bold;
                     font-size: 1.1rem;
                 }
@@ -126,7 +126,7 @@
     width: 0%;
     // height: 70px;
     opacity: 0;
-    background-color: darkcyan;
+    background-color: $tertiary_colour;
     border-radius: 0 15px 15px 0;
 }
 
