--- a/sass/utils/_animations.scss
+++ b/sass/utils/_animations.scss
@@ -110,30 +110,6 @@
 
 //end heart animation
 
-//validation menu
-
-@keyframes slide {
-    0% {
-        width: 0%;
-
-
-    }
-
-    100% {
-        width: 20%;
-        opacity: 1;
-    }
-}
-
-@keyframes jump {
-    0% {
-        transform: rotate(-180deg);
-    }
-
-    100% {
-        transform: rotate(0deg);
-    }
-}
 
 // Appearance of the menus
 
@@ -146,3 +122,5 @@
         transform: scale(1);
     }
 }
+
+// end appearance of the menus
