--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -45,7 +45,7 @@
             }
         }
 
-        &__flat {
+        &__dish {
             width: auto;
             margin: 16px;
             border-radius: 15px;
@@ -56,7 +56,7 @@
             display: flex;
             justify-content: space-between;
             overflow: hidden;
-            animation: itemAppear .6s;
+            animation: dishAppear .6s;
             animation-timing-function: cubic-bezier(.5, 1.58, .34, .82);
             animation-fill-mode: both;
             transform: scale(0);
